# ChangeLog for dev-lang/perl
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/perl/ChangeLog,v 1.139 2005/07/06 19:58:13 wolf31o2 Exp $

  06 Jul 2005; Chris Gianelloni <wolf31o2@gentoo.org> perl-5.8.6-r5.ebuild:
  Stable on arm, m68k, s390, and sh.

  05 Jul 2005; Hardave Riar <hardave@gentoo.org> perl-5.8.6-r5.ebuild:
  Stable on mips.

  03 Jul 2005; Michael Hanselmann <hansmi@gentoo.org> perl-5.8.6-r5.ebuild:
  Stable on ppc.

  02 Jul 2005; Bryan Østergaard <kloeri@gentoo.org> perl-5.8.6-r5.ebuild:
  Stable on alpha.

  02 Jul 2005; Rene Nussbaumer <killerfox@gentoo.org> perl-5.8.6-r5.ebuild:
  Stable on hppa.

*perl-5.8.6-r5 (30 Jun 2005)

  30 Jun 2005; Michael Cummings <mcummings@gentoo.org> perl-5.8.6-r4.ebuild,
  +perl-5.8.6-r5.ebuild:
  Sorry folks, there was a typo in libperl-5.8.6s ebuild that made this
  necessary.

*perl-5.8.7 (29 Jun 2005)

  29 Jun 2005; Michael Cummings <mcummings@gentoo.org>
  -files/perl-5.8.0-RC2-special-h2ph-not-failing-on-machine_ansi_header.patc
  h, -files/perl-5.8.2-perldoc-emptydirs.patch,
  -files/perl-5.8.2-picdl.patch, -files/perl-5.8.2-prelink-lpthread.patch,
  -files/perl-5.8.2-reorder-INC.patch, -files/perl-5.8.2-uclibc.patch,
  -files/perl-5.8.4-noksh.patch, -files/perl-5.8.4-nonblock.patch,
  -files/perl-5.8.4-perldoc-emptydirs.patch, -files/perl-5.8.4-picdl.patch,
  -files/perl-5.8.4-prelink-lpthread.patch,
  -files/perl-5.8.4-reorder-INC.patch, -files/perl-5.8.5-noksh.patch,
  -files/perl-5.8.5-nonblock.patch,
  -files/perl-5.8.5-perldoc-emptydirs.patch, -files/perl-5.8.5-picdl.patch,
  -files/perl-5.8.5-prelink-lpthread.patch,
  -files/perl-5.8.5-reorder-INC.patch, -files/perl-5.8.6-noksh.patch,
  -files/perl-5.8.6-perldoc-emptydirs.patch, -files/perl-5.8.6-picdl.patch,
  -files/perl-5.8.6-prelink-lpthread.patch,
  -files/perl-5.8.6-reorder-INC.patch,
  +files/perl-5.8.7-CAN-2005-0448-rmtree.patch,