@@ -1,6 +1,9 @@
 # ChangeLog for sys-devel/libperl
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/libperl/ChangeLog,v 1.69 2005/07/06 19:57:40 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/libperl/ChangeLog,v 1.70 2005/07/06 20:25:07 plasmaroo Exp $
+
+  06 Jul 2005; <plasmaroo@gentoo.org> libperl-5.8.6-r1.ebuild:
+  Stable on IA64.
 
   06 Jul 2005; Chris Gianelloni <wolf31o2@gentoo.org>
   libperl-5.8.6-r1.ebuild:
